Fix scrollbar for large sessions.

--- a/newtab.css
+++ b/newtab.css
@@ -29,7 +29,7 @@ div {
 }
 
 .device-name {
-  margin: 0px -20px 0.5em -20px;
+  margin: 0px -20px 0px -20px;
   padding: 6px 20px 3px;
 
   font-weight: bold;
@@ -41,7 +41,7 @@ div {
 
 .session {
   margin: 0px -20px 0px -20px;
-  padding: 6px 20px 0.5em;
+  padding: 0.5em 20px 0.5em;
 
   max-height: 320px;
   overflow-y: auto;
